--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900&family=Source+Sans+Pro:wght@400;600;700&display=swap');
 body {
     margin: 0;
@@ -18,6 +23,12 @@ body {
 
 html {
     font-size: 62.5%; /*equal font-size : 10px*/
+}
+
+h1 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 20px;
 }
 
 li {
